--- a/ananas/ananas.html
+++ b/ananas/ananas.html
@@ -16,7 +16,7 @@
                  <image src='../img/nazad.jpg'>
             </a>
 
-            <a href="./Бизнес-план Wings Ананас.pptx">тык</a>
+            <a href="./Wings.pptx">Wings</a>
             
         
         </div>
