--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <main>
         <h1>Welcome to My Website</h1>  
         <div class="container">
-            <a class="zaichik" href="">
+            <a class="zaichik" href="./apple/apple.html">
                 <image src='./img/apple.jpg'>
             </a>
             <a class="zaichik" href="./ananas/ananas.html">
                 <image src='./img/ananas.jpg'>
             </a>
-            <a class="zaichik" href="">
+            <a class="zaichik" href="./berry./berry.html">
                 <image src='./img/berry.jpg'>
             </a>
-            <a class="zaichik" href="">
+            <a class="zaichik" href="./kivi/kivi.html">
                 <image src='./img/kivi.jpg'>
             </a>
         
