--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="zaichik" href="./ananas/ananas.html">
                 <image src='./img/ananas.jpg'>
             </a>
-            <a class="zaichik" href="./berry./berry.html">
+            <a class="zaichik" href="./berry/berry.html">
                 <image src='./img/berry.jpg'>
             </a>
             <a class="zaichik" href="./kivi/kivi.html">
