--- a/ananas/ananas.html
+++ b/ananas/ananas.html
@@ -17,6 +17,8 @@
             </a>
 
             <a href="./Wings.pptx">Wings</a>
+          <a href="./KP_Kitay_Khaynan.doc">2 doc</a>
+          <a href="./tur_v_Kitay_o_Khaynan.pptx">3 pptx</a>
             
         
         </div>
