--- a/ananas/ananas.html
+++ b/ananas/ananas.html
@@ -15,11 +15,15 @@
             <a class="zaichik" href="../index.html">
                  <image src='../img/nazad.jpg'>
             </a>
-
+<div>
             <a href="./Wings.pptx">Wings</a>
+</div>
+          <div>
           <a href="./KP_Kitay_Khaynan.doc">2 doc</a>
+            </div>
+          <div>
           <a href="./tur_v_Kitay_o_Khaynan.pptx">3 pptx</a>
-            
+            </div>            
         
         </div>
     </main>
